# ppisp

./: ATTRIBUTIONS.md  README.md  pyproject.toml  setup.py
ppisp/: __init__.py  bindings.h  ext.cpp  report.py
ppisp/src/: ppisp_impl.cu  ppisp_math.cuh  ppisp_math_bwd.cuh
tests/: test_cuda_vs_torch.py  test_gradcheck.py  torch_reference.py
