[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppisp"
version = "1.0.1"
description = "CUDA extension for PPISP"
requires-python = ">=3.10"
dependencies = ["torch", "matplotlib", "numpy"]
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "NVIDIA Corporation" },
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["ppisp"]
exclude = ["ppisp.src", "tests", "tests.*"]

